# oped_quadruped

./: .gitignore  .gitmodules  LICENSE  README.md
anggada_bringup/: CMakeLists.txt  package.xml
anggada_bringup/launch/: bringup.launch
anggada_config/: CMakeLists.txt  config.json  package.xml
anggada_config/include/: gait_config.h
anggada_config/launch/: bringup.launch  gazebo.launch  navigate.launch  slam.launch
anggada_description/: CMakeLists.txt  package.xml
anggada_description/launch/: description.launch  view_urdf.launch
anggada_description/meshes/: hip.dae  lower_leg.dae
anggada_description/rviz/: quadruped.rviz
anggada_description/urdf/: accessories.urdf.xacro  anggada.urdf  anggada.urdf.xacro  gen_urdf  leg.urdf.xacro  properties.urdf.xacro
anggada_gazebo/: CMakeLists.txt  package.xml
anggada_gazebo/config/: ros_control.yaml
anggada_gazebo/launch/: gazebo.launch
anggada_gazebo/scripts/: odometry.py
champ/champ_base/: CMakeLists.txt  package.xml
dynamixel_joints_calibrator/: CMakeLists.txt  README.md  package.xml
hardware_install/: rplidar.sh  u2d2_dynamixel.sh
oped_bringup/: CMakeLists.txt  package.xml
oped_config/: CMakeLists.txt  config.json  package.xml
oped_description/: CMakeLists.txt  package.xml
oped_description/launch/: description.launch  view_urdf.launch
oped_description/meshes/: rplidar.dae  ydlidar_x4.dae
oped_description/meshes/gazebo/: lower_leg.stl  upper_leg.stl
oped_description/meshes/gazebo/backup/: base.stl
oped_description/rviz/: urdf_viewer.rviz
oped_description/urdf/: accessories.urdf.xacro  leg.urdf.xacro  oped.urdf  oped.urdf.xacro  properties.urdf.xacro
oped_description/urdf/gazebo/: accessories.urdf.xacro  champ.urdf  champ.urdf.xacro  leg.urdf.xacro  properties.urdf.xacro  stand.urdf
oped_description/urdf/gazebo/backup/: accessories.urdf.xacro  champ.urdf
oped_description/urdf/ori/: accessories.urdf.xacro
oped_description/urdf/x orientation/: gen_urdf  oped.urdf  properties.urdf.xacro
oped_gazebo/: CMakeLists.txt  package.xml
oped_gazebo/launch/: gazebo.launch  gazebo_default.launch  gazebo_outdoor.launch
oped_gazebo/meshes/: Configuration_1.STL  map_config_1.stl  map_config_3.stl  map_config_4.stl
oped_gazebo/meshes/backup/: Config_normal.STL  Furniture.STL  Map_Config_1.STL  Map_Config_2.STL  Map_Config_3.STL  Map_Config_4.STL  Map_default.STL  Obstacle.STL
oped_gazebo/models/: config_default.sdf  test.sdf
oped_gazebo/scripts/: imu_sensor.py  odometry.py  odometry_tf.py
oped_gazebo/worlds/: Lapangan.STL  Lapangan2.STL  default_maze.world  furniture.dae  kos_kembar.world  map_config_1.world  map_config_2.stl  map_config_2.world  map_config_3.world  map_config_4.world  map_default.stl  map_default.world  map_default_set.world  obstacle.dae
oped_navigation/: CMakeLists.txt  package.xml
oped_teleop/: CMakeLists.txt  README.md  oped_teleop.py  package.xml  teleop_pose.py
oped_teleop/launch/: teleop.launch
(+117 files in other folders)
