<?xml version="1.0"?>
<package format="2">
  <name>oped_gazebo</name>
  <version>0.1.0</version>
  <description>CHAMP Gazebo Package</description>

  <maintainer email="billy.nugraha.sutandi@gmail.com">Billy Nugraha Sutandi</maintainer>
  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <author>Juan Miguel Jimeno</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  
  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." /> 
  </export>
</package>
